--- a/notebooks/Day_03.ipynb
+++ b/notebooks/Day_03.ipynb
@@ -356,7 +356,7 @@
     "    elif i.isnumeric():  # returns True if numeric\n",
     "        digit += 1\n",
     "print(\n",
-    "    f\"LETTERS {letter}\\n{digits}\"\n",
+    "    f\"LETTERS {letter}\\n{digit}\"\n",
     ")  # two different types of formating method is shown in both solution"
    ]
   },
